# spatial_detector

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  FEATURES.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REFACTORING_PLAN.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  cert.conf  cert.p12  cert.pem  enhanced_webcam.py  generate_cert.sh  global_rules.md  key.pem  pyproject.toml  requirements.txt  run_https.py  run_local.py  setup.py  test_server.py  version_bump.py  webcam_detection.py
.github/workflows/: pypi-publish.yml  test-python-package.yml
scripts/: process_video.py
spatial_detector/cli/: webcam_app.py
spatial_detector/depth/: __init__.py  depth_calibration.py  midas_depth.py
spatial_detector/detection/: yolo_detector.py
spatial_detector/mapping/: __init__.py  depth_calibrator.py  spatial_map.py
spatial_detector/projection/: __init__.py  camera_model.py  spatial_mapper.py
spatial_detector/visualization/: visualizer.py
spatial_detector/web/: __init__.py  __main__.py  server.py
spatial_detector/web/static/: test.html
spatial_detector/web/static/css/: style.css
spatial_detector/web/static/js/: app.js  camera.js  main.js  map-view.js  wizard.js
spatial_detector/web/static/js/modules/: bbox-renderer.js  connection-manager.js  detection-processor.js  ui-manager.js
spatial_detector/web/templates/: index.html
src/detection/: yolo_detector.py
